refactor: KCY 테스트 v2.0 초안